Fix z-index

--- a/app/assets/stylesheets/section/showroom.scss
+++ b/app/assets/stylesheets/section/showroom.scss
@@ -30,6 +30,7 @@
         width: 245px;
         top: 57px;
         display: none;
+        z-index: 1;
         a {
           background: #000;
           color: #e0457e;
